Fix modal z-index issues

--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -1,4 +1,5 @@
 .modal--overlay {
+    z-index: 100;
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     flex-direction: column;
